# one-record-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
examples/: pieces_in_shipment.py  simple_piece.py
onerecord/: __init__.py  client.py  enums.py  exceptions.py  utils.py
onerecord/models/: __init__.py  api.py  cargo.py  enums.py
tests/: test_client.py  test_exceptions.py  test_models_api.py  test_models_cargo.py  test_utils.py
